🐛 fix the text overflow

--- a/src/renderer/ui/components/last_dm_message/style/index.scss
+++ b/src/renderer/ui/components/last_dm_message/style/index.scss
@@ -6,22 +6,26 @@
   gap: 15px;
   align-items: center;
   padding: 10px 5px;
+  flex-grow: 1;
   cursor: pointer;
+
   &:hover {
     background-color: $background;
   }
   > .info-container {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     gap: 5px;
-    min-width: 220px;
+    overflow: hidden;
 
     > span {
       font-weight: 600;
       font-size: 18px;
 
       + span {
+
         font-weight: 400;
         font-size: 12px;
         color: $textgray;
@@ -29,8 +33,8 @@
         word-break: break-all;
         overflow: hidden;
         text-overflow: ellipsis;
-        width: 100%;
         white-space: nowrap;
+        width: 95%;
       }
     }
   }
